# TennisMatchScoreboard

./: .gitignore  README.md  alembic.ini  poetry.toml  pyproject.toml  tennis.ini
src/: application.py  config.py  container.py  containers.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2657fd8b03c2_remove_nullable_true.py  4a9a599d4505_create_initial_tables_for_players_and_.py  5c238251abb3_string_uuid.py  69a3fb958b66_string_text.py  c8708b56e565_make_matches_winner_nullable.py  f354cd6c606f_score_string_250.py  f6481a961028_initial_schema.py
src/controllers/: controller.py  index_controller.py  match_score_controller.py  matches_controller.py  new_match_controller.py
src/dao/: matches_dao.py  players_dao.py
src/database/: db.py  session.py
src/database/models/: match.py  player.py
src/dto/: going_match_dto.py  match_dto.py  page_content_dto.py  player_dto.py  player_score_dto.py  request_dto.py  response_dto.py  score_dto.py
src/exceptions/: base_exception.py  own_exceptions.py
src/routing/: router.py
src/service/: match_score_service.py  ongoing_match_service.py  pagination_service.py  tennis_game.py  tennis_set.py  tie_break.py
src/utils/: container.py  logger.py  render.py  request_parser.py  score_formatter.py  validator.py
src/views/static/: style.css
src/views/templates/: error.html  index.html  match-score.html  matches.html  new-match.html
tests/: test_count_points.py
